# fsbuilder

./: .gitignore  CHANGELOG.md  Makefile  README.md  conftest.py  design.md  fsbuilder.md  galaxy.yml  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: generate_docs.py
examples/: advanced_features.yml  basic_usage.yml  comprehensive_deployment.yml  conditionals_and_handlers.yml  line_and_block_editing.yml  loop_with_defaults.yml
molecule/check_mode/: converge.yml  molecule.yml  verify.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/default/files/: static_file.txt
molecule/error_handling/: converge.yml  molecule.yml  verify.yml
molecule/idempotency/: converge.yml  molecule.yml  verify.yml
molecule/lineinfile_blockinfile/: converge.yml  molecule.yml  verify.yml
plugins/action/: fsbuilder.py
plugins/module_utils/: fsbuilder_common.py
plugins/modules/: fsbuilder.py
roles/fsbuilder/action_plugins/: fsbuilder.py
roles/fsbuilder/meta/: main.yml
tests/unit/: conftest.py
tests/unit/plugins/action/: test_fsbuilder.py
tests/unit/plugins/modules/: test_fsbuilder.py
